# llm-knowledge-extractor

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  notes.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py
app/services/: llm_service.py  nlp_service.py
evals/: README.md  __init__.py  eval_llm_quality.py
tests/: test_api.py  test_services.py
